Fixed the weird horizontal overflow problems

--- a/portfolio-fe/src/index.css
+++ b/portfolio-fe/src/index.css
@@ -1,3 +1,8 @@
+html {
+  max-width: min(100%, 100vw);
+  overflow-x: hidden;
+}
+
 body {
   display: flex;
   background-color: #66C2FB;
